--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,10 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go 1.15
+      - name: Set up Go 1.18
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15
+          stable: 'false'
+          go-version: '1.18beta1'
 
       - name: Check out code
         uses: actions/checkout@v2
