--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
+      - name: Download dependencies
+        run: go1.18beta1 download
+
       - name: Run tests
         run: go1.18beta1 test -v -race ./...
 
