--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,19 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go 1.15
+      - name: Set up Go 1.17.6
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15
+          go-version: '1.17.6'
+
+      - name: Set up Go 1.18beta1
+        run: go install golang.org/dl/go1.18beta1@latest
 
       - name: Check out code
         uses: actions/checkout@v2
 
       - name: Download dependencies
-        run: go mod download
+        run: go1.18beta1 download
 
       - name: Run tests
-        run: go test -v -race ./...
+        run: go1.18beta1 test -v -race ./...
 
       - name: Build
-        run: go build
+        run: go1.18beta1 build
