--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,22 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go 1.17.6
+      - name: Set up Go 1.18
         uses: actions/setup-go@v2
         with:
-          go-version: '1.17.6'
-
-      - name: Set up Go 1.18beta1
-        run: go install golang.org/dl/go1.18beta1@latest
+          go-version: '1.18'
 
       - name: Check out code
         uses: actions/checkout@v2
 
       - name: Download dependencies
-        run: go1.18beta1 download
+        run: go download
 
       - name: Run tests
-        run: go1.18beta1 test -v -race ./...
+        run: go test -v -race ./...
 
       - name: Build
-        run: go1.18beta1 build
+        run: go build
