--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download dependencies
-        run: go download
+        run: go mod download
 
       - name: Run tests
         run: go test -v -race ./...
